# webApp

./: .gitignore
backend/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  env_example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  scraper.py  user.py
backend/app/core/: celery_app.py  config.py  logger_config.py  scraper_config.py  security.py
backend/app/db/: engine.py
backend/app/models/: scraper.py  user.py
backend/app/services/: scraper_service.py  user_service.py
backend/app/tasks/: cleanup_tasks.py  scraper_tasks.py
backend/tests/: test.xlsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: DashboardLayout.jsx  Modal.jsx
frontend/src/context/: AuthContext.js  AuthContext.jsx  AuthProvider.jsx
frontend/src/pages/: History.jsx  Login.jsx  Register.jsx  Scraper.jsx  oldHistory.txt
