[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.1",
    "selenium>=4.40.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.40.0",
    "uvicorn-worker>=0.4.0",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]
